[package]
name = "lrn-yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
wasm-bindgen = "0.2.82"
wasm-bindgen-futures = "0.4.32"
js-sys = "0.3.59" 
web-sys = { version = "0.3.59", features = [ "Headers", "Request", "RequestInit", "RequestMode", "Response", "Window" ] }
stylist = { version = "0.10", features = ["yew_integration"] }
solana-client-wasm = "1.11.0-beta"
web3-rs = { path = "../web3-rs" }
